namespace/devops-tools/k8s-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: devops-tools
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - image: registry:2
        name: registry
        volumeMounts:
        - name: docker
          mountPath: /var/run/docker.sock
        ports:
        - containerPort: 5000
          name: registry
      - name: registryui
        image: hyper/docker-registry-web
        ports:
        - containerPort: 8080
      volumes:
      - name: docker
        hostPath:
          path: /var/run/docker.sock
