namespace/devops-tools/k8s-registry/service-frontent.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: devops-tools
  labels:
    app: registry
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: registry
  type: LoadBalancer
