namespace/devops-tools/k8s-registry/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui
  namespace: devops-tools
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: "/"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   rewrite ^(/jenkins)$ http://$best_http_host$1/ permanent;
spec:
  rules:
  - host: registry.k8slocal.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: registry-ui
              port:
                number: 8080
